# experimental-hs-todo-list

./: README.md  todo-list.cabal
src/: Console.hs  Main.hs  Output.hs
src/Output/: Channel.hs  MonadOutput.hs  Out.hs  Stream.hs
src/Todo/: Actions.hs  Pure.hs  Store.hs  Type.hs
src/Todo/Store/: Class.hs  Instances.hs  JsonFileListStoreAccessor.hs  ListStore.hs
