name:                 todo-list
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Kirill Saksin
maintainer:           smt@smt.run
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable todo-list
  main-is:              Main.hs
  other-modules:        Console, Output
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                       ,mtl
                       ,free
  hs-source-dirs:       src
  default-language:     Haskell2010
