name:                 todo-list
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Kirill Saksin
maintainer:           smt@smt.run
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable todo-list
  main-is:              Main.hs
  other-modules:        Output
                      , Output.Channel
                      , Output.MonadOutput
                      , Output.Out
                      , Output.Stream
                      , Todo.Actions
                      , Todo.Pure
                      , Todo.Type
                      , Todo.Store.Class
                      , Todo.Store.Instances
                      , Todo.Store.JsonFileListStoreAccessor
                      , Todo.Store.ListStore
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                       ,mtl
                       ,optparse-applicative
                       ,aeson
                       ,directory
                       ,bytestring
  hs-source-dirs:       src
  default-language:     Haskell2010
